--- a/gthread/Makefile.am
+++ b/gthread/Makefile.am
@@ -19,7 +19,7 @@ libgthread_la_LDFLAGS = \
 	-release $(LT_RELEASE) \
 	-export-dynamic
 
-libgthread_la_LIBADD = @G_THREAD_LIBS@
+libgthread_la_LIBADD = @G_THREAD_LIBS@ $(libglib)
 
 noinst_PROGRAMS = testgthread
-testgthread_LDADD = ../libglib.la libgthread.la 
+testgthread_LDADD = ../libglib.la libgthread.la @G_THREAD_LIBS@
