--- a/gmodule/Makefile.am
+++ b/gmodule/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/gmodule \
+AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/gmodule \
 	-DG_LOG_DOMAIN=\"GModule\" @GLIB_DEBUG_FLAGS@
 
 EXTRA_DIST =	\
